examples/test/testpolicy11889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11889
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key32: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value15
          key34: value9
      podSelector:
        matchLabels:
          key43: value28
          key32: value38
          key9: value15
